--- a/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
@@ -201,10 +201,11 @@
 
 
 
-                                        <div class="row pt-4" hidden>
+                                        <div class="row pt-4">
                                             <div class="col-6  pt-4">
                                                 <figure class="highcharts-figure">
-                                                  
+                                                    <div id="container1"></div>
+                                                    <p class="highcharts-description"></p>
                                                 </figure>
 
                                             </div>
@@ -235,6 +236,11 @@
 {
     <script src="~/js/plugins/bootstrap-datetimepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/es.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://code.highcharts.com/themes/adaptive.js"></script>
 
     <script src="~/js/core/analitycs/vProjectSheet.js" asp-append-version="true"></script>
     
