--- a/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
@@ -116,9 +116,9 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-2 col-sm-2 text-right pt-2">
+                                    <div class="col-2 col-sm-2 pt-2">
                                         <button type="button" class="btn btn-default btn-default btn-report">
-                                            <i class="fas fa-file-pdf"></i> Buscar
+                                            <i class="fas fa-file-pdf"></i> @Localizer["Search"]
                                         </button>
                                     </div>
                                 </div>
