Construccion de la ultima grafica en el reporte de ficha tecnica de proyecto

--- a/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ProjectSheet.cshtml
@@ -211,7 +211,8 @@
                                             </div>
                                             <div class="col-6  pt-4">
                                                 <figure class="highcharts-figure">
-                                                   
+                                                    <div id="container2"></div>
+                                                    <p class="highcharts-description"></p>
                                                 </figure>
                                             </div>
                                         </div>
