--- a/PMCTool.App/Views/Project/ProjectSheet.cshtml
+++ b/PMCTool.App/Views/Project/ProjectSheet.cshtml
@@ -7,7 +7,6 @@
 }
 @section ScriptsHeader
 {
-    <link href="~/css/vcore/global-estatus.css" rel="stylesheet" asp-append-version="true" />
 }
 <style>
     .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
@@ -40,53 +39,11 @@
         text-align: center;
     }
 
-
-    .highcharts-figure,
-    .highcharts-data-table table {
-        min-width: 310px;
-        max-width: 800px;
-        margin: 1em auto;
-    }
-
     #container {
         height: 400px;
     }
 
-    .highcharts-data-table table {
-        font-family: Verdana, sans-serif;
-        border-collapse: collapse;
-        border: 1px solid var(--highcharts-neutral-color-10, #e6e6e6);
-        margin: 10px auto;
-        text-align: center;
-        width: 100%;
-        max-width: 500px;
-    }
-
-    .highcharts-data-table caption {
-        padding: 1em 0;
-        font-size: 1.2em;
-        color: var(--highcharts-neutral-color-60, #666);
-    }
-
-    .highcharts-data-table th {
-        font-weight: 600;
-        padding: 0.5em;
-    }
-
-    .highcharts-data-table td,
-    .highcharts-data-table th,
-    .highcharts-data-table caption {
-        padding: 0.5em;
-    }
-
-    .highcharts-data-table thead tr,
-    .highcharts-data-table tbody tr:nth-child(even) {
-        background: var(--highcharts-neutral-color-3, #f7f7f7);
-    }
-
-    .highcharts-description {
-        margin: 0.3rem 10px;
-    }
+  
 
 </style>
 
@@ -202,21 +159,22 @@
 
 
                                         <div class="row pt-4">
-                                            <div class="col-6  pt-4">
+                                            <div class="col-12  pt-4">
                                                 <figure class="highcharts-figure">
                                                     <div id="container1"></div>
                                                     <p class="highcharts-description"></p>
                                                 </figure>
 
                                             </div>
-                                            <div class="col-6  pt-4">
+                                        </div>
+                                        <div class="row pt-4">
+                                            <div class="col-12  pt-4">
                                                 <figure class="highcharts-figure">
                                                     <div id="container2"></div>
                                                     <p class="highcharts-description"></p>
                                                 </figure>
                                             </div>
-                                        </div>
-
+                                        </div>        
 
 
 
