--- a/PMCTool.App/Views/Project/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/Project/ProjectDetail.cshtml
@@ -1,7 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PMCTool.Models.Core.Location
 @{
+    ViewData["Title"] = "Detalle projecto";
+    Layout = "_Layout";
+    var envName = Context.Request.Cookies["pmctool-name-env"];
+
+}
+@section ScriptsHeader
+{
 }
 <style>
     .page-title-box .page-title {
@@ -17,23 +22,48 @@
 </style>
 <div class="content">
     <div class="container-fluid pl-0 ml-0">
-        <div class="row">
-            <div class="col-12">
-                <div class="page-title-box">
-                    <div class="page-title-right">
+        <div class="row justify-content-center mt-3">
+            <div class="col-11 pl-2 pr-2">
+                <div class="row g-0">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-10 col-sm-10">
+                                <div class="btn-group bootstrap-select">
+                                    <select name="projects" class="selectpicker sel-projects" id="selprojects" data-title="Proyectos" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                        @foreach (var project in ViewBag.projects)
+                                        {
+                                            <option value="@project.Key">@project.Value</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="btn-group col-2 col-sm-2 pt-2">
+                                <button type="button" class="btn btn-default btn-default btn-report">
+                                    <i class="fas fa-file-pdf"></i> @Localizer["Search"]
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="page-title">Bienvenido a PMC-Tool</h4>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-11 pl-2 pr-2">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="page-title-box">
+                            <div class="page-title-right">
+                            </div>
+                            <h4 class="page-title">Bienvenido a PMC-Tool</h4>
+                        </div>
+                    </div>
+                </div>
                 <div class="row g-0">
                     <div class="col-sm-2 col-lg-2">
                         <div class="card shadow-none m-0">
                             <div class="card-body text-center">
                                 <i class="fas fa-server text-muted" style="font-size: 24px;"></i>
-                                <h3><span class="Count tt-projects">9</span></h3>
+                                <h3><span class="Count tt-participants">9</span></h3>
                                 <h6 class="text-muted font-15 mb-0">Recursos Asignados</h6>
                             </div>
                         </div>
@@ -53,7 +83,7 @@
                         <div class="card shadow-none m-0 border-start">
                             <div class="card-body text-center">
                                 <i class="fas fa-file-alt text-muted" style="font-size: 24px;"></i>
-                                <h3><span class="Count  tt-evidence">7</span></h3>
+                                <h3><span class="Count  tt-task-delayed">7</span></h3>
                                 <h6 class="text-muted font-15 mb-0">Actividades con retrazo</h6>
                             </div>
                         </div>
@@ -63,7 +93,7 @@
                         <div class="card shadow-none m-0 border-start">
                             <div class="card-body text-center">
                                 <i class="fas fa-chart-line text-muted" style="font-size: 24px;"></i>
-                                <h3><span class="Count tt-productivity">66</span></h3>
+                                <h3><span class="Count tt-risk">66</span></h3>
                                 <h6 class="text-muted font-15 mb-0">Riesgos Identificados</h6>
                             </div>
                         </div>
@@ -73,7 +103,7 @@
                         <div class="card shadow-none m-0 border-start">
                             <div class="card-body text-center">
                                 <i class="fas fa-tasks text-muted" style="font-size: 24px;"></i>
-                                <h3><span class="Count tt-productivity">1</span></h3>
+                                <h3><span class="Count tt-risk-closed">1</span></h3>
                                 <h6 class="text-muted font-15 mb-0">Riesgos Mitigados</h6>
                             </div>
                         </div>
@@ -83,7 +113,7 @@
                         <div class="card shadow-none m-0 border-start">
                             <div class="card-body text-center">
                                 <i class="fas fa-file-alt text-muted" style="font-size: 24px;"></i>
-                                <h3><span class="Count tt-productivity">7</span></h3>
+                                <h3><span class="Count tt-changes">7</span></h3>
                                 <h6 class="text-muted font-15 mb-0">Control de cambios</h6>
                             </div>
                         </div>
@@ -125,15 +155,15 @@
                                 <div class="col-12">
                                     <div class="row">
                                         <div class="col-md-6 text-center  small px-4  text-left">
-                                            <strong class="txt-blue"> Avance real <span class="underline-link"> 67.44 %</span> </strong>
+                                            <strong class="txt-blue"> Avance real <span class="underline-link real-progress"> 67.44 %</span> </strong>
                                             <div class="progress" style="height: 15px;">
-                                                <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width:67.44%;"></div>
+                                                <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated graphic-real-progress" style="width:67.44%;"></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6  text-center small px-4  text-left">
-                                            <strong class="txt-blue"> Avance planeado <span class="underline-link"> 100.00 %</span> </strong>
+                                            <strong class="txt-blue"> Avance planeado <span class="underline-link planned-progress"> 100.00 %</span> </strong>
                                             <div class="progress" style="height: 15px;">
-                                                <div class="progress-bar bg-default  progress-bar-striped progress-bar-animated" style="width:100%"></div>
+                                                <div class="progress-bar bg-default  progress-bar-striped progress-bar-animated graphic-planned-progress" style="width:100%"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -215,3 +245,17 @@
         </div>
     </div>
 </div>
+<!--Sección de scripts-->
+@section scripts
+{
+    <script src="~/js/plugins/bootstrap-datetimepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/es.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://code.highcharts.com/themes/adaptive.js"></script>
+
+    <script src="~/js/core/analitycs/vProjectDetail.js" asp-append-version="true"></script>
+
+}
