--- a/PMCTool.App/Views/Project/ProjectSheet.cshtml
+++ b/PMCTool.App/Views/Project/ProjectSheet.cshtml
@@ -75,7 +75,7 @@
                                     </div>
                                     <div class="col-2 col-sm-2 pt-2">
                                         <button type="button" class="btn btn-default btn-default btn-report">
-                                            <i class="fas fa-file-pdf"></i> @Localizer["Search"]
+                                            @Localizer["Search"]
                                         </button>
                                     </div>
                                 </div>
