--- a/PMCTool.App/Views/Project/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/Project/ProjectDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Detalle projecto";
+    ViewData["Title"] = "Reporte individual de proyecto";
     Layout = "_Layout";
     var envName = Context.Request.Cookies["pmctool-name-env"];
 
