--- a/PMCTool.App/Views/Project/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/Project/ProjectDetail.cshtml
@@ -161,7 +161,7 @@
                                         <div class="col-md-6 text-center  small px-4  text-left">
                                             <strong class="txt-blue"> @Localizer["RealProgress"] <span class="underline-link real-progress"> 0 %</span> </strong>
                                             <div class="progress" style="height: 15px;">
-                                                <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated graphic-real-progress" style="width:0%;"></div>
+                                                <div class="progress-bar  progress-bar-striped progress-bar-animated graphic-real-progress" style="width:0%;"></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6  text-center small px-4  text-left">
