--- a/PMCTool.App/Views/Project/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/Project/ProjectDetail.cshtml
@@ -139,7 +139,7 @@
                         <div class="card" style="height: 456px;">
                             <div class="card-body">
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <b class="header-title">@Localizer["Analytics1_002"]</b>
+                                    <b class="header-title">@Localizer["hoursByProject"]</b>
 
                                 </div>
                                 <div id="box-chart" style="height: 312px; max-height: 312px; position: relative; ">
