Fix ReportEvidences add tag ProjectName

--- a/PMCTool.App/Views/Project/_PartialReportEvidences.cshtml
+++ b/PMCTool.App/Views/Project/_PartialReportEvidences.cshtml
@@ -9,12 +9,12 @@
 
     var Leader = Model.First().LeaderName;
     var Pm = Model.First().ProjectManagerName;
-
+    var ProjectName = Model.First().ProjectName;
 
     <div class="card pt-2">
         <div class="card-body p-1">
             <h5 class="media align-items-center font-weight-bold  mb-0 mt-0" style="background: #d4d4d4;padding: 6px;">
-                <span class="title-report">ACTINVER</span>
+                <span class="title-report">@ProjectName</span>
             </h5>
             <div class="row">
                 <div class="col-md-6">
