--- a/PMCTool.App/Views/Project/ProjectsControl.cshtml
+++ b/PMCTool.App/Views/Project/ProjectsControl.cshtml
@@ -84,7 +84,7 @@
                 <div class="row g-0">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-10 col-sm-10">
+                            <div class="col-8 col-sm-8">
                                 <div class="btn-group bootstrap-select">
                                     <select name="projects" class="selectpicker sel-projects" id="selprojects"
                                             data-title="Proyectos" data-style="btn-default btn-outline"
@@ -98,7 +98,12 @@
                             </div>
                             <div class="btn-group col-2 col-sm-2 pt-2">
                                 <button type="button" class="btn btn-default btn-default btn-report">
-                                    <i class="fas fa-file-pdf"></i> @Localizer["Search"]
+                                    <i class="fas fa-search"></i> @Localizer["Search"]
+                                </button>
+                            </div>
+                            <div class="btn-group col-2 col-sm-2 pt-2">
+                                <button type="button" class="btn btn-default btn-default btn-close" style="background:black;" onclick="window.location.reload();">
+                                    <i class="fas fa-clean"></i> @Localizer["Analytics5_021"]
                                 </button>
                             </div>
                         </div>
