--- a/PMCTool.App/Views/Mainbit/ProyectosInternos.cshtml
+++ b/PMCTool.App/Views/Mainbit/ProyectosInternos.cshtml
@@ -59,6 +59,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-4">
                                     <a href="/project/ProjectDetail" class="btn btn-default btn-wd col-sm">Detalle del proyecto</a>
+                                    <a href="/project/ProjectsControl" class="btn btn-default btn-wd col-sm">Control de proyectos</a>
                                 </div>
                             </div>
                         </div>
