266 - A5.13.0: Reporte Ejecutivo de Evidencias: Agregar una columna que muestre el número de referencias cargadas.

--- a/PMCTool.App/Views/Project/_PartialReportEvidences.cshtml
+++ b/PMCTool.App/Views/Project/_PartialReportEvidences.cshtml
@@ -56,6 +56,7 @@
                             <th class="bg txt-center">Ponderación</th>
                             <th class="bg txt-center">Aspectos Relevantes / Comentarios</th>
                             <th class="bg txt-center">Detalle del elemento</th>
+                            <th class="bg txt-center">Total Referencias cargadas</th>
                         </tr>
                     </thead>
                     <tbody> 
@@ -96,6 +97,7 @@
                                 <td class="txt-center">@item.Weight</td>
                                 <td>@item.Comment</td>
                                 <td class="txt-center"><a href="@item.urlEvidence" target="_black">IR</a></td>
+                                <td class="txt-center">@item.TotalEvidences</td>
                             </tr>
                             traduccionStatus = ""; 
                         } 
