--- a/PMCTool.App/Views/Project/ProjectsControl.cshtml
+++ b/PMCTool.App/Views/Project/ProjectsControl.cshtml
@@ -54,6 +54,27 @@
         font-weight: 700;
         color: #607d8b;
     }
+
+    th {
+        text-wrap-mode: nowrap;
+    }
+    /* Header gris claro y texto negro */
+    .dt-header-light.dataTable thead th,
+    .dt-header-light.dataTable thead th.sorting,
+    .dt-header-light.dataTable thead th.sorting_asc,
+    .dt-header-light.dataTable thead th.sorting_desc {
+        background-color: #e9ecef; /* gris claro */
+        color: #111; /* negro */
+        font-weight: 600;
+        border-bottom: 1px solid #d5d5d5;
+    }
+
+        /* (opcional) mantener el mismo color al pasar el mouse */
+        .dt-header-light.dataTable thead th.sorting:hover,
+        .dt-header-light.dataTable thead th.sorting_asc:hover,
+        .dt-header-light.dataTable thead th.sorting_desc:hover {
+            background-color: #e9ecef;
+        }
 </style>
 
 <div class="content">
@@ -63,7 +84,7 @@
                 <div class="row g-0">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-10 col-sm-10">
+                            <div class="col-8 col-sm-8">
                                 <div class="btn-group bootstrap-select">
                                     <select name="projects" class="selectpicker sel-projects" id="selprojects"
                                             data-title="Proyectos" data-style="btn-default btn-outline"
@@ -77,7 +98,12 @@
                             </div>
                             <div class="btn-group col-2 col-sm-2 pt-2">
                                 <button type="button" class="btn btn-default btn-default btn-report">
-                                    <i class="fas fa-file-pdf"></i> @Localizer["Search"]
+                                    <i class="fas fa-search"></i> @Localizer["Search"]
+                                </button>
+                            </div>
+                            <div class="btn-group col-2 col-sm-2 pt-2">
+                                <button type="button" class="btn btn-default btn-default btn-close" style="background:black;" onclick="window.location.reload();">
+                                    <i class="fas fa-clean"></i> @Localizer["Analytics5_021"]
                                 </button>
                             </div>
                         </div>
@@ -155,7 +181,7 @@
                             <div class="card-body">
                                 <div class="col-12">
                                     <div class="table-responsive">
-                                        <table class="table table-projects">
+                                        <table class="table table-projects dt-header-light">
                                             <thead>
                                                 <tr style="background:#c1c1c1;">
                                                     <th>@Localizer["Portfolio"]</th>
